@@ -1,4 +1,4 @@
-VERSION = 3.0.18_pre3
+VERSION = 3.1.0_pre1
 CFLAGS ?= -O2 -pipe
 
 # Should work for both GNU make and BSD make
@@ -46,7 +46,7 @@ TARGET = $(SBIN_TARGETS)
 
 dhcpcd_H = version.h
 dhcpcd_OBJS = arp.o client.o common.o configure.o dhcp.o dhcpcd.o \
-		interface.o logger.o signals.o socket.o
+		info.o interface.o logger.o signals.o socket.o
 
 # By default we don't need to link to anything
 # Except on Darwin where we need -lresolv, so they need to uncomment this
